manage inner cirlce + remove enable preview to allow stream debugging in Intellij